[metadata]
name = iqapt
version = 0.0.6
author = Winteryan
author_email = Winteryan1998@gmail.com
description = A Image Quality Assessment Package based on PyTorch
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/winterYANGWT/IQAPT-Image_Quality_Assessment_PyTorch
project_urls =
    Bug Tracker = https://github.com/winterYANGWT/IQAPT-Image_Quality_Assessment_PyTorch/issues
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent


[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
include_package_data=True
install_requires =
    einops
    torch>=1.10.0
    torchvision>=0.12.0

[options.packages.find]
where = src
